@@ -117,6 +117,8 @@ function createServer(app, opts) {
             protocolVersion: req.httpVersion,
             requestMethod: req.method,
             requestTime: new Date,
+            remoteAddr: req.connection.remoteAddr,
+            remotePort: req.connection.remotePort,
             serverName: serverName,
             serverPort: serverPort,
             pathInfo: uri.pathname,
@@ -165,6 +167,8 @@ function createServer(app, opts) {
  *   - protocolVersion      The protocol version
  *   - requestMethod        The request method (e.g. "GET" or "POST")
  *   - requestTime          A Date that indicates the time the request was received
+ *   - remoteAddr           The IP address of the client
+ *   - remotePort           The port being used on the client machine
  *   - serverName           The host name of the server
  *   - serverPort           The port number the server is listening on
  *   - scriptName           The virtual location of the application
@@ -183,6 +187,8 @@ function makeEnv(opts) {
     env.protocolVersion = opts.protocolVersion || "1.0";
     env.requestMethod = (opts.requestMethod || "GET").toUpperCase();
     env.requestTime = opts.requestTime || new Date;
+    env.remoteAddr = opts.remoteAddr || "";
+    env.remotePort = opts.remotePort || "";
     env.serverName = opts.serverName || "";
     env.serverPort = opts.serverPort || "";
     env.scriptName = opts.scriptName || "";
