@@ -42,6 +42,8 @@ function checkEnv(env) {
         "protocol",
         "protocolVersion",
         "requestMethod",
+        "remoteAddr",
+        "remotePort",
         "serverName",
         "serverPort",
         "scriptName",
