@@ -58,10 +58,42 @@ Request.prototype.__defineGetter__("protocolVersion", function protocolVersion()
     return this.env.protocolVersion;
 });
 
+/**
+ * The HTTP method used in the request.
+ */
 Request.prototype.__defineGetter__("method", function method() {
     return this.env.requestMethod;
 });
 
+/**
+ * The time the request was received by the server.
+ */
+Request.prototype.__defineGetter__("time", function time() {
+    return this.env.requestTime;
+});
+
+/**
+ * The IP address of the client.
+ */
+Request.prototype.__defineGetter__("remoteAddr", function remoteAddr() {
+    if (this.env.httpXForwardedFor) {
+        return this.env.httpXForwardedFor;
+    }
+
+    return this.env.remoteAddr;
+});
+
+/**
+ * The port number the client machine is using.
+ */
+Request.prototype.__defineGetter__("remotePort", function remotePort() {
+    return this.env.remotePort;
+});
+
+/**
+ * The name of the virtual location of the current request within the context of
+ * the rest of the application.
+ */
 Request.prototype.__defineGetter__("scriptName", function scriptName() {
     return this.env.scriptName;
 });
@@ -70,6 +102,9 @@ Request.prototype.__defineSetter__("scriptName", function setScriptName(value) {
     this.env.scriptName = value;
 });
 
+/**
+ * The remainder of the request URL's path.
+ */
 Request.prototype.__defineGetter__("pathInfo", function pathInfo() {
     return this.env.pathInfo;
 });
@@ -78,6 +113,9 @@ Request.prototype.__defineSetter__("pathInfo", function setPathInfo(value) {
     this.env.pathInfo = value;
 });
 
+/**
+ * The query string that was used in the URL.
+ */
 Request.prototype.__defineGetter__("queryString", function queryString() {
     return this.env.queryString;
 });
@@ -86,10 +124,16 @@ Request.prototype.__defineSetter__("queryString", function queryString(value) {
     this.env.queryString = value;
 });
 
+/**
+ * The type of content in the request body.
+ */
 Request.prototype.__defineGetter__("contentType", function contentType() {
     return this.env.contentType;
 });
 
+/**
+ * The byte length of the request body.
+ */
 Request.prototype.__defineGetter__("contentLength", function contentLength() {
     return this.env.contentLength;
 });
